--- a/Cons/cons_inlined.html
+++ b/Cons/cons_inlined.html
@@ -13,12 +13,12 @@
 
     <div class="email-container" style="max-width:600px;background-color:white;font-family:sans-serif;margin: 0 auto;overflow:hidden;border-radius:5px;" >
 
-        <div class="email-container-header__project-color" style="background-color:#F3AF11;width:100%;height:10px;" ></div>
+        <div class="email-container-header__project-color" style="background-color:#3F51B5;width:100%;height:10px;" ></div>
 
-        <div class="email-container-header" style="margin: 30px 6% 20px;text-align:center;display:none;" >
+        <div class="email-container-header" style="margin: 30px 6% 20px;text-align:center;" >
 
-            <div class="email-container-header__logo" style="max-width:160px;margin: 0 auto;" >
-                <img src="#" alt="logo" style="max-width:100%;max-height:60px;" />
+            <div class="email-container-header__logo" style="max-width:160px;margin: 0 auto;display:none;" >
+                <img src="#" alt="logo" style="max-width:100%;max-height:60px" />
             </div>
 
         </div>
@@ -51,7 +51,7 @@
             Найдите сегодня хотя бы полчаса для того, чтобы подумать, записать, что же на самом деле важно для вас. Чего хотите ВЫ? Прислушайтесь к голосу интуиции, почувствуйте в теле отклик и импульс к движению...
         </div>
 
-        <div class="email-container__image" style="margin: 40px 6%;max-width:520px;border-radius:5px;overflow:hidden;" >
+        <div class="email-container__image" style="margin: 40px 6%;border-radius:5px;overflow:hidden;" >
             <img src="http://dowlatow.justclick.ru/media/content/dowlatow/karlson-spok.jpeg" alt="email image" style="max-width:100%;height:auto;border-radius:5px;" />
         </div>
 
@@ -64,7 +64,7 @@
         </div>
 
         <div class="email-container-call-to-action" style="margin: 40px 6%;padding: 30px;border-radius:5px;background-color:#f2f2f2;text-align:center;" >
-            <a href="#" class="email-container-call-to-action__btn" style="text-decoration:none;color:white;font-weight:600;background-color:#34A952;padding: 20px 30px;border-radius:5px;display:block;max-width:100%;" >Посмотреть мастер класс</a>
+            <a href="#" class="email-container-call-to-action__btn" style="text-decoration:none;color:white;font-weight:600;background-color:#ff4081;padding: 20px 30px;border-radius:5px;display:block;max-width:100%;" >Посмотреть мастер класс</a>
         </div>
 
         <div class="email__p-container" style="margin: 20px 6%;font-size:16px;font-weight:300;line-height:24px;color:#666;" >
@@ -88,7 +88,7 @@
             <div class="email-container-author__divider" style="border-bottom: 1px solid #ebeded;margin: 40px 0;" ></div>
 
             <div class="email-container-author__question" style="color:#666;" >
-                Есть вопросы? Пишите: <a href="mailto:support@dowlatow.ru" style="text-decoration:none;color:#34A952;" >support@dowlatow.ru</a>
+                Есть вопросы? Пишите: <a href="mailto:support@dowlatow.ru" style="text-decoration:none;color:#ff4081;" >support@dowlatow.ru</a>
             </div>
 
         </div>
