--- a/DI/di_inlined.html
+++ b/DI/di_inlined.html
@@ -13,12 +13,12 @@
 
     <div class="email-container" style="max-width:600px;background-color:white;font-family:sans-serif;margin: 0 auto;overflow:hidden;border-radius:5px;" >
 
-        <div class="email-container-header__project-color" style="background-color:#F3AF11;width:100%;height:10px;" ></div>
+        <div class="email-container-header__project-color" style="background-color:#A453A0;width:100%;height:10px;" ></div>
 
-        <div class="email-container-header" style="margin: 30px 6% 20px;text-align:center;display:none;" >
+        <div class="email-container-header" style="margin: 30px 6% 20px;text-align:center;" >
 
-            <div class="email-container-header__logo" style="max-width:160px;margin: 0 auto;" >
-                <img src="#" alt="logo" style="max-width:100%;max-height:60px;" />
+            <div class="email-container-header__logo" style="max-width:160px;margin: 0 auto;display:none;" >
+                <img src="#" alt="logo" style="max-width:100%;max-height:60px" />
             </div>
 
         </div>
@@ -52,7 +52,7 @@
         </div>
 
         <div class="email-container__image" style="margin: 40px 6%;max-width:520px;border-radius:5px;overflow:hidden;" >
-            <img src="http://dowlatow.justclick.ru/media/content/dowlatow/karlson-spok.jpeg" alt="email image" style="max-width:100%;height:auto;border-radius:5px;" />
+            <img src="http://dowlatow.justclick.ru/media/content/dowlatow/karlson-spok.jpeg" alt="email image" style="max-width:100%;height:auto;" />
         </div>
 
         <div class="email__h2-container" style="margin: 30px 6% 20px;font-size:20px;font-weight:500;line-height:30px;color:#333;" >
@@ -64,7 +64,7 @@
         </div>
 
         <div class="email-container-call-to-action" style="margin: 40px 6%;padding: 30px;border-radius:5px;background-color:#f2f2f2;text-align:center;" >
-            <a href="#" class="email-container-call-to-action__btn" style="text-decoration:none;color:white;font-weight:600;background-color:#34A952;padding: 20px 30px;border-radius:5px;display:block;max-width:100%;" >Посмотреть мастер класс</a>
+            <a href="#" class="email-container-call-to-action__btn" style="text-decoration:none;color:white;font-weight:600;background-color:#A453A0;padding: 20px 30px;border-radius:5px;display:block;max-width:100%;" >Посмотреть мастер класс</a>
         </div>
 
         <div class="email__p-container" style="margin: 20px 6%;font-size:16px;font-weight:300;line-height:24px;color:#666;" >
@@ -77,7 +77,7 @@
 
         <div class="email-container-author" style="margin: 40px 6%;padding: 30px 0 10px;text-align:center;" >
 
-            <div class="email-container-author__image" style="width:90px;height:90px;border-radius:45px; overflow:hidden;margin: 0 auto;" >
+            <div class="email-container-author__image" style="margin: 40px 6%;border-radius:5px;overflow:hidden;" >
                 <img src="http://dowlatow.justclick.ru/media/content/dowlatow/kartinki_SH_K_new/foto_KD.png" alt="author image" style="width:100%;height:auto;" >
             </div>
 
@@ -88,7 +88,7 @@
             <div class="email-container-author__divider" style="border-bottom: 1px solid #ebeded;margin: 40px 0;" ></div>
 
             <div class="email-container-author__question" style="color:#666;" >
-                Есть вопросы? Пишите: <a href="mailto:support@dowlatow.ru" style="text-decoration:none;color:#34A952;" >support@dowlatow.ru</a>
+                Есть вопросы? Пишите: <a href="mailto:support@dowlatow.ru" style="text-decoration:none;color:#A453A0;" >support@dowlatow.ru</a>
             </div>
 
         </div>
