--- a/DI/di_inlined.html
+++ b/DI/di_inlined.html
@@ -77,7 +77,7 @@
 
         <div class="email-container-author" style="margin: 40px 6%;padding: 30px 0 10px;text-align:center;" >
 
-            <div class="email-container-author__image" style="margin: 40px 6%;border-radius:5px;overflow:hidden;" >
+            <div class="email-container-author__image" style="width:90px;height:90px;border-radius:45px; overflow:hidden;margin: 0 auto;" >
                 <img src="http://dowlatow.justclick.ru/media/content/dowlatow/kartinki_SH_K_new/foto_KD.png" alt="author image" style="width:100%;height:auto;" >
             </div>
 
