--- a/DI/di_inlined.html
+++ b/DI/di_inlined.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="email-container__image" style="margin: 40px 6%;max-width:520px;border-radius:5px;overflow:hidden;" >
-            <img src="http://dowlatow.justclick.ru/media/content/dowlatow/karlson-spok.jpeg" alt="email image" style="max-width:100%;height:auto;" />
+            <img src="http://dowlatow.justclick.ru/media/content/dowlatow/karlson-spok.jpeg" alt="email image" style="max-width:100%;height:auto;border-radius:5px;" />
         </div>
 
         <div class="email__h2-container" style="margin: 30px 6% 20px;font-size:20px;font-weight:500;line-height:30px;color:#333;" >
