--- a/DI/di_inlined.html
+++ b/DI/di_inlined.html
@@ -51,7 +51,7 @@
             Найдите сегодня хотя бы полчаса для того, чтобы подумать, записать, что же на самом деле важно для вас. Чего хотите ВЫ? Прислушайтесь к голосу интуиции, почувствуйте в теле отклик и импульс к движению...
         </div>
 
-        <div class="email-container__image" style="margin: 40px 6%;max-width:520px;border-radius:5px;overflow:hidden;" >
+        <div class="email-container__image" style="margin: 40px 6%;border-radius:5px;overflow:hidden;" >
             <img src="http://dowlatow.justclick.ru/media/content/dowlatow/karlson-spok.jpeg" alt="email image" style="max-width:100%;height:auto;border-radius:5px;" />
         </div>
 
