Coach school email update

--- a/src/pages/consult/info.html
+++ b/src/pages/consult/info.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 subject: Dowlatow
-description: Сообщество счастливых людей.
+description: Консультант онлайн
 ---
 
 
@@ -13,7 +13,7 @@ description: Сообщество счастливых людей.
         <columns>
             <h1>Здравствуйте, Денис!</h1>
             <spacer size="10"></spacer>
-            <p>Поздравляю! Вы зарегистрировались на сайте <a href="http://club.dowlatow.ru">club.dowlatow.ru</a> и стали участником Клуба – Наблюдателем. Добро пожаловать!</p>
+            <p>Поздравляю! Вы зарегистрировались на сайте <a href="http://www.consult4me.ru/">www.consult4me.ru</a>. Добро пожаловать!</p>
             <spacer size="20"></spacer>
             <button href="#" class="default radius small-expanded">Подтвердить регистрацию</button>
         </columns>
