--- a/src/pages/di/thanks.html
+++ b/src/pages/di/thanks.html
@@ -1,9 +1,8 @@
 ---
 layout: default
 subject: Dowlatow
-description: Школа коучинга
+description: Духовная интеграционика
 ---
-
 
 {{>header}}
 
@@ -20,7 +19,7 @@ description: Школа коучинга
         <columns>
             <h1 class="text-center">Благодарим Вас за покупку!</h1>
             <spacer size="10"></spacer>
-            <p class="text-center">В Школе коучинга у нас много всего интересного. И в следующих 2-х письмах я познакомлю Вас с интерфейсом Вашего аккаунта, чтобы Вы смогли легко и непринужденно им пользоваться. Прорабатывать материалы и достигать поставленных целей.</p>
+            <p class="text-center">Духовная интеграционика - волшебная палочка изменения реальности. Раскройте свой потенциал - станьте собой настоящим. Живите той жизнью, о которой мечтали.</p>
             <spacer size="20"></spacer>
             <center>
                 <button href="#" class="default radius small-expanded">Перейти к изучению курса</button>
