--- a/src/pages/consult/thanks.html
+++ b/src/pages/consult/thanks.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 subject: Dowlatow
-description: Школа коучинга
+description: Консультант онлайн
 ---
 
 
@@ -20,7 +20,7 @@ description: Школа коучинга
         <columns>
             <h1 class="text-center">Благодарим Вас за покупку!</h1>
             <spacer size="10"></spacer>
-            <p class="text-center">В Школе коучинга у нас много всего интересного. И в следующих 2-х письмах я познакомлю Вас с интерфейсом Вашего аккаунта, чтобы Вы смогли легко и непринужденно им пользоваться. Прорабатывать материалы и достигать поставленных целей.</p>
+            <p class="text-center">Консультант онлайн - естественное продолжение вашего обучения в «Школе коучинга». И в следующих 2-х письмах я познакомлю Вас с интерфейсом Вашего аккаунта, чтобы Вы смогли легко и непринужденно им пользоваться. Прорабатывать материалы и достигать поставленных целей.</p>
             <spacer size="20"></spacer>
             <center>
                 <button href="#" class="default radius small-expanded">Перейти к изучению курса</button>
