--- a/src/pages/di/info.html
+++ b/src/pages/di/info.html
@@ -1,9 +1,8 @@
 ---
 layout: default
 subject: Dowlatow
-description: Сообщество счастливых людей.
+description: Духовная интеграционика
 ---
-
 
 {{>header}}
 
@@ -13,7 +12,7 @@ description: Сообщество счастливых людей.
         <columns>
             <h1>Здравствуйте, Денис!</h1>
             <spacer size="10"></spacer>
-            <p>Поздравляю! Вы зарегистрировались на сайте <a href="http://club.dowlatow.ru">club.dowlatow.ru</a> и стали участником Клуба – Наблюдателем. Добро пожаловать!</p>
+            <p>Поздравляю! Вы зарегистрировались на сайте <a href="http://integra.dowlatow.ru/">www.integra.dowlatow.ru</a>. Добро пожаловать!</p>
             <spacer size="20"></spacer>
             <button href="#" class="default radius small-expanded">Подтвердить регистрацию</button>
         </columns>
