--- a/src/pages/psy/thanks.html
+++ b/src/pages/psy/thanks.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 subject: Dowlatow
-description: Школа коучинга
+description: Психолог онлайн
 ---
 
 
@@ -20,7 +20,7 @@ description: Школа коучинга
         <columns>
             <h1 class="text-center">Благодарим Вас за покупку!</h1>
             <spacer size="10"></spacer>
-            <p class="text-center">В Школе коучинга у нас много всего интересного. И в следующих 2-х письмах я познакомлю Вас с интерфейсом Вашего аккаунта, чтобы Вы смогли легко и непринужденно им пользоваться. Прорабатывать материалы и достигать поставленных целей.</p>
+            <p class="text-center">Знания, которые лежат мертвым грузом, тянут вас на дно. Можно пройти очередной вебинар или тренинг и поставить себе галочку в списке дел. Но пока вы не начнете что-то делать, вы так и останетесь ходячей энциклопедией.</p>
             <spacer size="20"></spacer>
             <center>
                 <button href="#" class="default radius small-expanded">Перейти к изучению курса</button>
